--- a/package.json
+++ b/package.json
@@ -43,13 +43,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
+    "errorhandler": "^1.5.1",
     "express": "^4.19.2",
     "express-promise-router": "^4.1.1",
     "express-validator": "^7.1.0",
+    "glob": "^11.0.0",
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
+    "node-dependency-injection": "^3.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "winston": "^3.13.1",
@@ -58,6 +61,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "@types/errorhandler": "^1.5.3",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
