--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prepare": "husky install",
-    "test": "echo \"Error: no test specified\" && exit 0",
     "build": "npm run build:clean && npm run build:tsc && npm run build:di",
     "build:clean": "rm -r dist; exit 0",
     "build:di": "find ./src -type f \\( -name '*.json' -o -name '*.yml' -o -name '*.yaml' -o -name '*.html' -o -name '*.png' -o -name '*.env' \\) -exec rsync --relative {} dist/ \\;",
@@ -15,7 +13,15 @@
     "docker:mongo": "docker-compose -f ./docker/docker-compose.yml up --build -d",
     "lint": "eslint . --ext .ts --max-warnings=0",
     "lint:fix": "eslint . --ext .ts --fix",
-    "pre-commit": "lint-staged"
+    "start": "node ./dist/src/apps/pecera/start.js",
+    "start:local": "npm run build && node ./dist/src/apps/pecera/start.js",
+    "pre-commit": "lint-staged",
+    "test": "npm run build && npm run test:clean:coverage && npm run test:unit && npm run test:features && npm run test:merge:coverage",
+    "test:clean:coverage": "rm -rf coverage && rm -rf .nyc_output",
+    "test:features": "nyc --report-dir=coverage/cucumber --reporter=lcov cucumber-js -p pecera",
+    "test:unit": "nyc --report-dir=coverage/jest --reporter=lcov jest --detectOpenHandles --forceExit",
+    "test:unit:watch": "jest --watch --detectOpenHandles --forceExit",
+    "test:merge:coverage": "lcov-result-merger 'coverage/**/*.info' 'coverage/merged.info'"
   },
   "husky": {
     "hooks": {
@@ -41,13 +47,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
     "errorhandler": "^1.5.1",
     "express": "^4.19.2",
     "express-promise-router": "^4.1.1",
     "express-validator": "^7.1.0",
-    "glob": "^11.0.0",
+    "glob": "^10.4.1",
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
@@ -59,15 +66,43 @@
     "winston-mongodb": "^5.1.1"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^10.8.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/chai": "^4.3.16",
+    "@types/chance": "^1.1.6",
+    "@types/convict": "^6.1.6",
     "@types/cors": "^2.8.17",
     "@types/errorhandler": "^1.5.3",
     "@types/express": "^4.17.21",
+    "@types/glob": "^8.1.0",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1",
+    "@types/migrate-mongo": "^10.0.4",
+    "@types/minimatch": "^5.1.2",
+    "@types/supertest": "^2.0.16",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@types/uuid-validate": "^0.0.3",
+    "@types/yamljs": "^0.2.34",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "chai": "^4.4.1",
+    "chance": "^1.1.11",
+    "commit-message-validator": "^1.0.2",
     "eslint": "^8.57.0",
-    "madge": "^7.0.0",
+    "husky": "^8.0.3",
+    "install": "^0.13.0",
+    "jest": "^29.7.0",
+    "jest-sonar-reporter": "^2.0.0",
+    "lcov-result-merger": "^5.0.1",
+    "lint-staged": "15.2.5",
+    "madge": "^6.1.0",
+    "minimatch": "^10.0.1",
+    "newman": "^6.1.2",
+    "npm": "^10.8.2",
+    "nyc": "^15.1.0",
+    "prettier": "^3.3.3",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.4",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0"
   }
