--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "node-dependency-injection": "^2.7.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
+    "uuid": "^9.0.1",
+    "uuid-validate": "^0.0.3",
     "winston": "^3.13.1",
     "winston-mongodb": "^5.1.1"
   },
