[GH-4] feat(test): add environment arranger

--- a/src/apps/pecera/dependency-injection/application_test.yaml
+++ b/src/apps/pecera/dependency-injection/application_test.yaml
@@ -1,2 +1,7 @@
 imports:
   - { resource: ./application.yaml }
+
+services:
+  pecera.EnvironmentArranger:
+    class: ../../../../tests/Contexts/shared/infrastructure/mongo/MongoEnvironmentArranger
+    arguments: ['@pecera.MongoClient']
