[GH-5] feat(auth): add refresh token

--- a/src/apps/pecera/dependency-injection/Auth/application.yaml
+++ b/src/apps/pecera/dependency-injection/Auth/application.yaml
@@ -29,3 +29,7 @@ services:
   pecera.Auth.application.ValidateMail:
     class: ../../../../Contexts/pecera/Auth/application/ValidateMail
     arguments: ['@pecera.Auth.domain.AuthRepository', '@plugin.Encrypter']
+
+  pecera.Auth.application.RefreshToken:
+    class: ../../../../Contexts/pecera/Auth/application/RefreshToken
+    arguments: ['@plugin.Encrypter']
