--- a/src/apps/pecera/dependency-injection/application.yaml
+++ b/src/apps/pecera/dependency-injection/application.yaml
@@ -1,3 +1,4 @@
 imports:
   - { resource: ./apps/application.yaml }
   - { resource: ./Auth/application.yaml }
+  - { resource: ./Todos/application.yaml }
