--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=20.9.0",
+    "npm": ">=10.1.0"
+  },
   "scripts": {
     "build": "npm run build:clean && npm run build:tsc && npm run build:di",
     "build:clean": "rm -r dist; exit 0",
@@ -10,6 +14,7 @@
     "build:tsc": "tsc -p tsconfig.prod.json --sourceMap false",
     "check-dependencies": "madge --circular ./src",
     "dev": "ts-node-dev --ignore-watch node_modules ./src/apps/pecera/start.ts",
+    "docker:local": "npm run build && docker-compose build && docker-compose up",
     "docker:mongo": "docker-compose -f ./docker/docker-compose.yml up --build -d",
     "lint": "eslint . --ext .ts --max-warnings=0",
     "lint:fix": "eslint . --ext .ts --fix",
