[GH-5] feat(Auth): add find user controller

--- a/src/apps/pecera/dependency-injection/Auth/application.yaml
+++ b/src/apps/pecera/dependency-injection/Auth/application.yaml
@@ -33,3 +33,7 @@ services:
   pecera.Auth.application.RefreshToken:
     class: ../../../../Contexts/pecera/Auth/application/RefreshToken
     arguments: ['@plugin.Encrypter']
+
+  pecera.Auth.application.UserFinder:
+    class: ../../../../Contexts/pecera/Auth/application/UserFinder
+    arguments: ['@pecera.Auth.domain.AuthRepository']
