--- a/src/apps/pecera/dependency-injection/apps/application.yaml
+++ b/src/apps/pecera/dependency-injection/apps/application.yaml
@@ -24,6 +24,10 @@ services:
     class: ../../controllers/Auth/RegisterController
     arguments: ['@pecera.Auth.application.RegisterUser']
 
+  Apps.pecera.controllers.Auth.UserFinderController:
+    class: ../../controllers/Auth/UserFinderController
+    arguments: ['@pecera.Auth.application.UserFinder']
+
   Apps.pecera.controllers.Auth.ValidateMailController:
     class: ../../controllers/Auth/ValidateMailController
     arguments: ['@pecera.Auth.application.ValidateMail']
