[GH-999] feat(userGroups): add user groups

--- a/src/apps/pecera/dependency-injection/application.yaml
+++ b/src/apps/pecera/dependency-injection/application.yaml
@@ -2,3 +2,4 @@ imports:
   - { resource: ./apps/application.yaml }
   - { resource: ./Auth/application.yaml }
   - { resource: ./Todos/application.yaml }
+  - { resource: ./UsersGroups/application.yaml }
